# python-periscope

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/periscope/: __main__.py  capture.py  cli.py  container.py  diff.py  policy.py  preflight.py  session.py
src/periscope/sandbox/: command_runner.py  egress.py  network_sandbox.py
tests/: test_capture.py  test_cli.py  test_diff.py  test_egress.py  test_networksandbox.py  test_policy.py
