[project]
name = "periscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cbass-d", email = "sebassd1.12@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.3",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
periscope = "periscope.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
