[project]
name = "periscope-audit"
version = "0.1.1"
description = "Audit a container's network egress by running it inside an isolated network namespace and capturing every DNS query and TCP connection it makes."
readme = "README.md"
authors = [
    { name = "cbass-d", email = "sebassd1.12@gmail.com" }
]
requires-python = ">=3.14"
keywords = ["networking", "container", "security", "audit", "namespace", "egress", "podman"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]
dependencies = [
    "loguru>=0.7.3",
    "scapy>=2.6.1",
    "typer>=0.25.1",
]

[project.urls]
Repository = "https://github.com/cbass-d/python-periscope"
Issues = "https://github.com/cbass-d/python-periscope/issues"

[project.scripts]
periscope = "periscope.cli:app"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.14"
mypy_path = "src"
explicit_package_bases = true
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "periscope"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
